# pyCryptoPayAPI

./: .gitignore  404.html  CODE_OF_CONDUCT.md  LICENSE  Pipfile  README.md  dev-requirements.txt  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-docs.yml  codeql-analysis.yml  lib-test.yml  upload-to-pypi.yml
API/CryptoPayAPI/: index.html
API/CryptoPayAPI/errors/: index.html
API/CryptoPayAPI/schemas/: index.html
CryptoBotAPI/: __init__.py  api.py  errors.py  types.py
CryptoPayAPI/: __init__.py  api.py  errors.py  schemas.py  types.py
docs/: gen_ref_pages.py  get_token.ru.md  index.en.md  index.ru.md  install.en.md
docs/API/: SUMMARY.md
docs/API/CryptoPayAPI/: api.md  errors.en.md  errors.md  errors.ru.md  index.en.md  index.md  index.ru.md  schemas.en.md  schemas.md  schemas.ru.md  types.md
docs/en/: get_token.md  index.md
docs/en/examples/: webhook_example.md
docs/examples/: get_me.en.md  get_me.ru.md  testnet_usage.en.md  transfer_usage.en.md  transfer_usage.ru.md  webhook_example.ru.md
docs/ru/: index.md  install.md
docs/ru/examples/: testnet_usage.md
en/: index.html
en/API/CryptoPayAPI/: index.html
en/API/CryptoPayAPI/errors/: index.html
en/API/CryptoPayAPI/schemas/: index.html
en/examples/get_me/: index.html
en/examples/testnet_usage/: index.html
en/examples/transfer_usage/: index.html
en/examples/webhook_example/: index.html
en/get_token/: index.html
en/install/: index.html
examples/: constants-usage.py  get_me.py  testnet-usage.py  transfer-usage.py  webhook-example.py
examples/get_me/: index.html
examples/testnet_usage/: index.html
examples/transfer_usage/: index.html
examples/webhook_example/: index.html
get_token/: index.html
install/: index.html
ru/: index.html
ru/API/CryptoPayAPI/: index.html
ru/API/CryptoPayAPI/errors/: index.html
ru/API/CryptoPayAPI/schemas/: index.html
ru/examples/get_me/: index.html
ru/examples/testnet_usage/: index.html
ru/examples/transfer_usage/: index.html
ru/examples/webhook_example/: index.html
ru/get_token/: index.html
ru/install/: index.html
search/: search_index.json
src/CryptoPayAPI/: __init__.py  api.py  errors.py  schemas.py
tests/: test_main.py
